<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Burn After Reading</string>
    <string name="register_title">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="sms_number_hint">phone number</string>
    <string name="sms_text_hint">message</string>
    <string name="sms_button_label">Send</string>
    <string name="title_activity_reviever">Reviever</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reciever">Reciever</string>
    <string name="title_activity_read">Read</string>
    <string name="burn_message">Burn</string>
    <string name="demo_recieve_text">the sms should be here</string>
    <string name="recieve_screen_button_text">Recieve</string>
    <string name="send_screen_button_text">Send</string>
    <string name="demo_recieve_from">the sender phone no. should be here</string>
    <string name="title_activity_phone_number">PhoneNumber</string>
    <string name="phone_hint">Your number here</string>
    <string name="button_register">Register</string>

</resources>
