<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/sms_recieve_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_recieve_from"
         />
    
    <TextView
        android:id="@+id/sms_recieve_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_recieve_text"
        android:layout_below="@id/sms_recieve_from"
         />

	<Button 
        android:id="@+id/burn_button"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/sms_recieve_text"
    	android:layout_alignParentRight="true"
    	android:text="@string/burn_message"
    	android:onClick="burnMessage"
    	/>

</RelativeLayout>
